<?xml version="1.0"?>
<package>
  <name>object_displacer</name>
  <version>0.0.0</version>
  <description>The object_displacer package</description>

  <maintainer email="julvdev@gmail.com">Julien Van Loo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Whatever</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/object_displacer</url> -->

  <author email="julvdev@gmail.com">Julien Van Loo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>